--- a/flow-shop-scheduling/Makefile
+++ b/flow-shop-scheduling/Makefile
@@ -1,6 +1,6 @@
 TARGET = gafsp
 OBJS = main.o ga.o genome.o pop.o util.o problem.o
-CFLAGS = -O2 -g -Wall -std=c99
+CFLAGS = -O2 -g -Wall -Wno-unused-result -std=c99
 LIBS = -lm
 
 all: $(TARGET)
